Generate SQL with streaming

--- a/misc/test.ipynb
+++ b/misc/test.ipynb
@@ -287,7 +287,7 @@
    ],
    "source": [
     "# get most sold products on Friday\n",
-    "df[df[\"week_day\"] == \"Friday\"].groupby(\"product_name\").sum().sort_values(\"quantity\", ascending=False).head(5)\n"
+    "df[df[\"week_day\"] == \"Friday\"].groupby(\"product_name\").sum().sort_values(\"quantity\", ascending=False).head(5)"
    ]
   },
   {
